flutter_angle/lib/src/desktop/egl_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:flutter_angle/libegl')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  EGLBoolean Function(
    EGLDisplay,
    ffi.Pointer<EGLint>,
    ffi.Pointer<EGLConfig>,
    EGLint,
    ffi.Pointer<EGLint>,
  )
>()
external int eglChooseConfig(
  EGLDisplay dpy,
  ffi.Pointer<EGLint> attrib_list,
  ffi.Pointer<EGLConfig> configs,
  int config_size,
  ffi.Pointer<EGLint> num_config,
);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSurface, EGLNativePixmapType)>()
external int eglCopyBuffers(
  EGLDisplay dpy,
  EGLSurface surface,
  EGLNativePixmapType target,
);

@ffi.Native<
  EGLContext Function(EGLDisplay, EGLConfig, EGLContext, ffi.Pointer<EGLint>)
>()
external EGLContext eglCreateContext(
  EGLDisplay dpy,
  EGLConfig config,
  EGLContext share_context,
  ffi.Pointer<EGLint> attrib_list,
);

@ffi.Native<EGLSurface Function(EGLDisplay, EGLConfig, ffi.Pointer<EGLint>)>()
external EGLSurface eglCreatePbufferSurface(
  EGLDisplay dpy,
  EGLConfig config,
  ffi.Pointer<EGLint> attrib_list,
);

@ffi.Native<
  EGLSurface Function(
    EGLDisplay,
    EGLConfig,
    EGLNativePixmapType,
    ffi.Pointer<EGLint>,
  )
>()
external EGLSurface eglCreatePixmapSurface(
  EGLDisplay dpy,
  EGLConfig config,
  EGLNativePixmapType pixmap,
  ffi.Pointer<EGLint> attrib_list,
);

@ffi.Native<
  EGLSurface Function(
    EGLDisplay,
    EGLConfig,
    EGLNativeWindowType,
    ffi.Pointer<EGLint>,
  )
>()
external EGLSurface eglCreateWindowSurface(
  EGLDisplay dpy,
  EGLConfig config,
  EGLNativeWindowType win,
  ffi.Pointer<EGLint> attrib_list,
);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLContext)>()
external int eglDestroyContext(EGLDisplay dpy, EGLContext ctx);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSurface)>()
external int eglDestroySurface(EGLDisplay dpy, EGLSurface surface);

@ffi.Native<
  EGLBoolean Function(EGLDisplay, EGLConfig, EGLint, ffi.Pointer<EGLint>)
>()
external int eglGetConfigAttrib(
  EGLDisplay dpy,
  EGLConfig config,
  int attribute,
  ffi.Pointer<EGLint> value,
);

@ffi.Native<
  EGLBoolean Function(
    EGLDisplay,
    ffi.Pointer<EGLConfig>,
    EGLint,
    ffi.Pointer<EGLint>,
  )
>()
external int eglGetConfigs(
  EGLDisplay dpy,
  ffi.Pointer<EGLConfig> configs,
  int config_size,
  ffi.Pointer<EGLint> num_config,
);

@ffi.Native<EGLDisplay Function()>()
external EGLDisplay eglGetCurrentDisplay();

@ffi.Native<EGLSurface Function(EGLint)>()
external EGLSurface eglGetCurrentSurface(int readdraw);

@ffi.Native<EGLDisplay Function(EGLNativeDisplayType)>()
external EGLDisplay eglGetDisplay(int display_id);

@ffi.Native<EGLint Function()>()
external int eglGetError();

@ffi.Native<
  __eglMustCastToProperFunctionPointerType Function(ffi.Pointer<ffi.Char>)
>()
external __eglMustCastToProperFunctionPointerType eglGetProcAddress(
  ffi.Pointer<ffi.Char> procname,
);

@ffi.Native<
  EGLBoolean Function(EGLDisplay, ffi.Pointer<EGLint>, ffi.Pointer<EGLint>)
>()
external int eglInitialize(
  EGLDisplay dpy,
  ffi.Pointer<EGLint> major,
  ffi.Pointer<EGLint> minor,
);

@ffi.Native<
  EGLBoolean Function(EGLDisplay, EGLSurface, EGLSurface, EGLContext)
>()
external int eglMakeCurrent(
  EGLDisplay dpy,
  EGLSurface draw,
  EGLSurface read,
  EGLContext ctx,
);

@ffi.Native<
  EGLBoolean Function(EGLDisplay, EGLContext, EGLint, ffi.Pointer<EGLint>)
>()
external int eglQueryContext(
  EGLDisplay dpy,
  EGLContext ctx,
  int attribute,
  ffi.Pointer<EGLint> value,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(EGLDisplay, EGLint)>()
external ffi.Pointer<ffi.Char> eglQueryString(EGLDisplay dpy, int name);

@ffi.Native<
  EGLBoolean Function(EGLDisplay, EGLSurface, EGLint, ffi.Pointer<EGLint>)
>()
external int eglQuerySurface(
  EGLDisplay dpy,
  EGLSurface surface,
  int attribute,
  ffi.Pointer<EGLint> value,
);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSurface)>()
external int eglSwapBuffers(EGLDisplay dpy, EGLSurface surface);

@ffi.Native<EGLBoolean Function(EGLDisplay)>()
external int eglTerminate(EGLDisplay dpy);

@ffi.Native<EGLBoolean Function()>()
external int eglWaitGL();

@ffi.Native<EGLBoolean Function(EGLint)>()
external int eglWaitNative(int engine);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSurface, EGLint)>()
external int eglBindTexImage(EGLDisplay dpy, EGLSurface surface, int buffer);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSurface, EGLint)>()
external int eglReleaseTexImage(EGLDisplay dpy, EGLSurface surface, int buffer);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSurface, EGLint, EGLint)>()
external int eglSurfaceAttrib(
  EGLDisplay dpy,
  EGLSurface surface,
  int attribute,
  int value,
);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLint)>()
external int eglSwapInterval(EGLDisplay dpy, int interval);

@ffi.Native<EGLBoolean Function(EGLenum)>()
external int eglBindAPI(int api);

@ffi.Native<EGLenum Function()>()
external int eglQueryAPI();

@ffi.Native<
  EGLSurface Function(
    EGLDisplay,
    EGLenum,
    EGLClientBuffer,
    EGLConfig,
    ffi.Pointer<EGLint>,
  )
>()
external EGLSurface eglCreatePbufferFromClientBuffer(
  EGLDisplay dpy,
  int buftype,
  EGLClientBuffer buffer,
  EGLConfig config,
  ffi.Pointer<EGLint> attrib_list,
);

@ffi.Native<EGLBoolean Function()>()
external int eglReleaseThread();

@ffi.Native<EGLBoolean Function()>()
external int eglWaitClient();

@ffi.Native<EGLContext Function()>()
external EGLContext eglGetCurrentContext();

@ffi.Native<EGLSync Function(EGLDisplay, EGLenum, ffi.Pointer<EGLAttrib>)>()
external EGLSync eglCreateSync(
  EGLDisplay dpy,
  int type,
  ffi.Pointer<EGLAttrib> attrib_list,
);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSync)>()
external int eglDestroySync(EGLDisplay dpy, EGLSync sync);

@ffi.Native<EGLint Function(EGLDisplay, EGLSync, EGLint, EGLTime)>()
external int eglClientWaitSync(
  EGLDisplay dpy,
  EGLSync sync,
  int flags,
  int timeout,
);

@ffi.Native<
  EGLBoolean Function(EGLDisplay, EGLSync, EGLint, ffi.Pointer<EGLAttrib>)
>()
external int eglGetSyncAttrib(
  EGLDisplay dpy,
  EGLSync sync,
  int attribute,
  ffi.Pointer<EGLAttrib> value,
);

@ffi.Native<
  EGLImage Function(
    EGLDisplay,
    EGLContext,
    EGLenum,
    EGLClientBuffer,
    ffi.Pointer<EGLAttrib>,
  )
>()
external EGLImage eglCreateImage(
  EGLDisplay dpy,
  EGLContext ctx,
  int target,
  EGLClientBuffer buffer,
  ffi.Pointer<EGLAttrib> attrib_list,
);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLImage)>()
external int eglDestroyImage(EGLDisplay dpy, EGLImage image);

@ffi.Native<
  EGLDisplay Function(EGLenum, ffi.Pointer<ffi.Void>, ffi.Pointer<EGLAttrib>)
>()
external EGLDisplay eglGetPlatformDisplay(
  int platform,
  ffi.Pointer<ffi.Void> native_display,
  ffi.Pointer<EGLAttrib> attrib_list,
);

@ffi.Native<
  EGLSurface Function(
    EGLDisplay,
    EGLConfig,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<EGLAttrib>,
  )
>()
external EGLSurface eglCreatePlatformWindowSurface(
  EGLDisplay dpy,
  EGLConfig config,
  ffi.Pointer<ffi.Void> native_window,
  ffi.Pointer<EGLAttrib> attrib_list,
);

@ffi.Native<
  EGLSurface Function(
    EGLDisplay,
    EGLConfig,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<EGLAttrib>,
  )
>()
external EGLSurface eglCreatePlatformPixmapSurface(
  EGLDisplay dpy,
  EGLConfig config,
  ffi.Pointer<ffi.Void> native_pixmap,
  ffi.Pointer<EGLAttrib> attrib_list,
);

@ffi.Native<EGLBoolean Function(EGLDisplay, EGLSync, EGLint)>()
external int eglWaitSync(EGLDisplay dpy, EGLSync sync, int flags);

typedef EGLNativeDisplayType = ffi.Int;
typedef DartEGLNativeDisplayType = int;
typedef EGLNativePixmapType = ffi.Pointer<ffi.Void>;
typedef EGLNativeWindowType = ffi.Pointer<ffi.Void>;

/// EGL 1.2 types, renamed for consistency in EGL 1.3
typedef NativeDisplayType = EGLNativeDisplayType;
typedef NativePixmapType = EGLNativePixmapType;
typedef NativeWindowType = EGLNativeWindowType;
typedef khronos_int32_t = ffi.Int32;
typedef Dartkhronos_int32_t = int;
